<resources>
    <string name="app_name">Moovi</string>
    <string name="tv_show_not_found">TV Shows Not Found</string>
    <string name="image_poster">Main Poster</string>
    <string name="title">Title Movie</string>
    <string name="rating">10/10</string>
    <string name="error">Error</string>
    <string name="title_movie">Title Movie</string>
    <string name="tagline_example">Tagline Example</string>
    <string name="description">Description</string>
    <string name="homepage">Homepage</string>
    <string name="homepage_example">example.com</string>
    <string name="release_date">Release Date</string>
    <string name="release_date_example">23–10–2021</string>
    <string name="overview">Overview</string>
    <string name="title_favorite">Favorite</string>
    <string name="rating_title">Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>